--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.24.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "http-status": "^1.5.0"
+    "axios": "0.24.0",
+    "cors": "2.8.5",
+    "express": "4.17.1"
   },
   "devDependencies": {
-    "eslint": "^8.1.0",
-    "nodemon": "^2.0.14"
+    "eslint": "8.1.0",
+    "nodemon": "2.0.14"
   }
 }
